// Original file: proto/random.proto


export interface StreamMessage {
  'id'?: (number);
  'senderName'?: (string);
  'senderAvatar'?: (string);
  'message'?: (string);
}

export interface StreamMessage__Output {
  'id'?: (number);
  'senderName'?: (string);
  'senderAvatar'?: (string);
  'message'?: (string);
}
